--- a/calculador_imc/android/app/src/main/AndroidManifest.xml
+++ b/calculador_imc/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.my_tasks">
+    package="com.example.calculador_imc">
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -8,7 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="my_tasks"
+        android:label="calculador_imc"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
