--- a/calculador_imc/pubspec.yaml
+++ b/calculador_imc/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth: 0.11.1
+  package_info: 0.4.0+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
