--- a/calculador_imc/pubspec.yaml
+++ b/calculador_imc/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   firebase_auth: 0.11.1
   package_info: 0.4.0+3
+  firebase_core: 0.4.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
